# Object-Detection-Inference-Interface

./: .gitignore  inference_demo.ipynb  pyproject.toml  readme.md
src/odii/: __init__.py  plotting_utils.py  yolo_model.py
src/odii/yolov3/: readme.md
src/odii/yolov3/pytorchyolo/: detect.py  models.py
src/odii/yolov4/: readme.md
src/odii/yolov4/tool/: torch_utils.py  utils.py
src/odii/yolov6/: readme.md
src/odii/yolov6/utils/: checkpoint.py
src/odii/yolov7/: readme.md
src/odii/yolov7/models/: common.py  experimental.py  yolo.py
src/odii/yolov7/utils/: plots.py
src/odii/yolox/: readme.md
src/odii/yolox/exps/default/: yolox_s.py
